[gd_scene load_steps=5 format=2]

[ext_resource path="res://HelloWorld.gd" type="Script" id=1]
[ext_resource path="res://fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 36
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 36
font_data = ExtResource( 2 )

[node name="HelloWorld" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 40
custom_constants/margin_top = 40
custom_constants/margin_left = 40
custom_constants/margin_bottom = 40
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer"]
margin_left = 40.0
margin_top = 40.0
margin_right = 984.0
margin_bottom = 560.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/CenterContainer"]
margin_left = 122.0
margin_top = 193.0
margin_right = 821.0
margin_bottom = 327.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 40
alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/CenterContainer/VBoxContainer"]
margin_right = 699.0
margin_bottom = 44.0

[node name="Label" type="Label" parent="MarginContainer/CenterContainer/VBoxContainer/CenterContainer"]
margin_right = 699.0
margin_bottom = 44.0
custom_fonts/font = SubResource( 1 )
text = "Premi il pulsante per cambiare il testo"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer2" type="CenterContainer" parent="MarginContainer/CenterContainer/VBoxContainer"]
margin_top = 84.0
margin_right = 699.0
margin_bottom = 134.0

[node name="Button" type="Button" parent="MarginContainer/CenterContainer/VBoxContainer/CenterContainer2"]
margin_left = 256.0
margin_right = 442.0
margin_bottom = 50.0
size_flags_horizontal = 0
custom_fonts/font = SubResource( 2 )
text = "Premi qui"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/CenterContainer2/Button" to="." method="_on_Button_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]
